fix: :bug: fix `Scrollbar` and `SideBar` menu scroll effects

--- a/src/components/Sidebar/Main/SidebarMain.module.scss
+++ b/src/components/Sidebar/Main/SidebarMain.module.scss
@@ -33,9 +33,10 @@
 }
 
 .menuPrimaryList {
-  overflow-y: auto;
+  overflow-y: hidden;
   height: 100%;
   position: relative;
+  padding-inline: 0;
 }
 
 .menuSecondaryList {
