--- a/src/components/Sidebar/SubMenu/SidebarSubMenu.module.scss
+++ b/src/components/Sidebar/SubMenu/SidebarSubMenu.module.scss
@@ -21,6 +21,7 @@
   color: hsl(var(--base-font));
   height: 100%;
   max-height: 100vh;
+  overflow: scroll;
 }
 
 .titleBlock {
@@ -61,7 +62,7 @@
   width: calc(100% - px-to-rem(24));
   cursor: pointer;
 
-  &>* {
+  & > * {
     margin-block: 0;
     color: inherit;
   }
@@ -128,7 +129,7 @@
 .triggerCollapse {
   margin-inline-start: auto;
 
-  >svg {
+  > svg {
     color: hsl(var(--base-font));
     font-size: px-to-rem(24);
   }
